Migration mappings Yarn vers Mojang et harmonisation par rapport à la branche 26.1 Ça permet d'éviter d'avoir de trop grandes différences entre la branche master et 26.1 car la branche master était toujours sur les mappings Yarn